Fix stretched-link click area covering the menu on mobile

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -92,6 +92,10 @@ body {
   border: white;
 }
 
+.site-header {
+  position: relative;
+  z-index: $zindex-sticky;
+}
 // Menus
 #menus {
   @include home-large {
